--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -43,23 +43,34 @@
     width: 460px;
 }
 
-.fh-entity-embed-center {
-  clear: both;
-  float: none;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
+.fh-entity-embed-right,
 .fh-entity-embed-left {
+  float: none;
   clear: both;
-  float: left;
-  margin: 2em 2em 2em 0;
-  max-width: 300px;
+  margin: 2em;
+  max-width: 600px;
 }
 
-.fh-entity-embed-right {
-  clear: both;
-  float: left;
-  margin: 2em 0 2em 2em;
-  max-width: 300px;
+
+@media (min-width: 768px) {
+  .fh-entity-embed-center {
+    clear: both;
+    float: none;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+
+  .fh-entity-embed-left {
+    clear: both;
+    float: left;
+    margin: 2em 2em 2em 0;
+    max-width: 300px;
+  }
+
+  .fh-entity-embed-right {
+    clear: both;
+    float: left;
+    margin: 2em 0 2em 2em;
+    max-width: 300px;
+  }
 }
