Fixed entity browser sizing.

--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -1,3 +1,8 @@
+.entity-browser {
+    height: 600px !important;
+    width: 1000px !important;
+}
+
 .entity-results-list {
     float: left;
     height: 250px !important;
