OK button now starts disabled.

--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -1,3 +1,7 @@
+.cke_dialog_contents .cke_disabled {
+    display: none;
+}
+
 .entity-browser {
     height: 600px !important;
     width: 1000px !important;
