Entity browser pager styling.

--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -9,3 +9,12 @@
 .view-content .selected-entity {
     border: 4px solid #B63300;
 }
+
+ul.pager {
+    padding-left: 0;
+}
+
+ul.pager li {
+    display: inline-block;
+    list-style-type: none;
+}
