Hiding contextual links in embedded views.

--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -1,3 +1,7 @@
+.contextual-links-wrapper {
+    display: none;
+}
+
 .view-content .views-view-grid tr {
     vertical-align: text-top !important;
 }
