--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -7,7 +7,8 @@
 }
 
 .view-content .entity {
-    border: 4px solid #FFF;
+    border: 4px solid #C0C0C0;
+    padding: 2px;
 }
 
 .view-content .selected-entity {
