Renamed module-specific CSS classes / IDs.

--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -11,7 +11,7 @@
     padding: 2px;
 }
 
-.view-content .selected-entity {
+.view-content .ts-ck-entity-embed-selected-entity {
     border: 4px solid #B63300;
 }
 
