--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -6,7 +6,7 @@
     vertical-align: text-top !important;
 }
 
-.view-content .entity {
+.view-content .ts-ck-entity-embed-browser-entity {
     border: 4px solid #C0C0C0;
     padding: 2px;
 }
