--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -15,6 +15,16 @@
     border: 4px solid #B63300;
 }
 
+.views-exposed-form .views-exposed-widget {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.views-exposed-form .views-exposed-widget input,
+.views-exposed-form .views-exposed-widget select {
+    margin-top: 5px;
+}
+
 ul.pager {
     padding-left: 0;
 }
