--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -6,13 +6,24 @@
     vertical-align: text-top !important;
 }
 
+.view-content .views-view-grid td {
+    vertical-align: top;
+}
+
 .view-content .ts-ck-entity-embed-browser-entity {
-    border: 4px solid #C0C0C0;
+    border: 2px solid #f1f1f1;
     padding: 2px;
+    min-height: 220px;
+    max-height: 220px;
+    overflow: hidden;
+}
+
+.view-content .ts-ck-entity-embed-browser-entity img {
+    max-width: 100%;
 }
 
 .view-content .ts-ck-entity-embed-selected-entity {
-    border: 4px solid #B63300;
+    border: 4px solid #0c8689;
 }
 
 .views-exposed-form .views-exposed-widget {
