Added loading indicator to entity browser. Prevents clicking on entities before click handlers are set.

--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -1,4 +1,11 @@
-.contextual-links-wrapper {
+.ts-ck-entity-embed-loading {
+    text-align: center;
+}
+
+.contextual-links-wrapper,
+.view-filters,
+.view-content,
+.pager {
     display: none;
 }
 
