--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -2,6 +2,10 @@ html {
     background: none !important;
 }
 
+body {
+    padding: 10px !important;
+}
+
 .cke_reset_all, .cke_reset_all * {
     white-space: normal !important;
 }
