--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -57,6 +57,7 @@
     clear: both;
     float: none;
     max-width: 600px;
+    min-width: 0;
     margin: 0 auto;
 }
 
@@ -88,6 +89,7 @@
         float: right;
         margin: 2em 0 2em 2em;
         max-width: 28%;
+        min-width: 28%;
     }
 
     #ts-ck-entity-embed-preview-box .ts-ck-entity-embed-left,
