--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -82,6 +82,7 @@
         float: left;
         margin: 2em 2em 2em 0;
         max-width: 28%;
+        min-width: 28%;
     }
 
     .ts-ck-entity-embed-right {
