Makes centered entity full width of body

--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -58,7 +58,7 @@
   .fh-entity-embed-center {
     clear: both;
     float: none;
-    max-width: 600px;
+    width: 100%;
     margin: 0 auto;
   }
 
